// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast should match a snapshot for a componentError 1`] = `
<div
  className="undefined undefined"
  data-test="toast-wrapper"
  onClick={[MockFunction]}
>
  <Button
    isFullWidth={true}
    type="reset"
    variant="danger"
  >
    Something went wrong with this component
  </Button>
</div>
`;

exports[`Toast should match a snapshot for a serverError 1`] = `
<div
  className="undefined undefined"
  data-test="toast-wrapper"
  onClick={[MockFunction]}
>
  <Button
    isFullWidth={true}
    type="reset"
    variant="danger"
  >
    Something went wrong fetching data
  </Button>
</div>
`;
